--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,10 @@ spring:
         username: root
         password: 
         driver-class-name: org.mariadb.jdbc.Driver
+    web:
+        resources:
+            static-locations: 
+                file: public
 logging:
     level:
         org:
